--- a/styles/globals.css
+++ b/styles/globals.css
@@ -286,3 +286,37 @@ body{
   border: none;
   cursor: pointer;
 }
+
+/* RIPPLE EFFECT AROUND THE SMALL CIRCLE ANIMATION */@keyframes ripple {
+  0% {
+    transform: scale(0);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 0;
+  }
+}
+
+.ripple-green {
+  border: 4px solid green;
+  border-radius: 50%;
+  animation: ripple 1.5s infinite;
+  box-sizing: content-box;
+  transform-origin: center;
+}
+
+.ripple-red {
+  border: 4px solid red;
+  border-radius: 50%;
+  animation: ripple 1.5s infinite;
+  box-sizing: content-box;
+  transform-origin: center;
+}
+.delay-500 {
+  animation-delay: 0.5s;
+}
+
+.delay-1000 {
+  animation-delay: 1s;
+}
