--- a/styles/globals.css
+++ b/styles/globals.css
@@ -82,7 +82,7 @@ body{
   height: 50px;
   object-fit: cover;
   box-sizing: border-box; 
-  border: 4px solid #ffffff;
+  border: 4px solid #696969;
 }
 /* 
 
