--- a/styles/globals.css
+++ b/styles/globals.css
@@ -78,11 +78,9 @@ body{
 .profile-avatar {
   border-radius: 50%;
   overflow: hidden;
-  width: 50px;
-  height: 50px;
   object-fit: cover;
   box-sizing: border-box; 
-  border: 4px solid #696969;
+  /* border: 4px solid #696969; */
 }
 /* 
 
@@ -171,7 +169,9 @@ body{
   font-size: 11px;
 }
 
-
+.sidebarAdmin{
+  color: black;
+}
 
 .sidebar::before {
   content: "";
@@ -319,4 +319,25 @@ body{
 
 .delay-1000 {
   animation-delay: 1s;
+}
+
+
+/* BLURRED IMAGE */
+.background-image {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  background-image: url('/backgroundlayer.jpg');
+  background-size: cover;
+  background-position: center;
+}
+
+.blur-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width:auto;
+  height: auto;
+  background-color: rgba(255, 255, 255, 0.836); /* Change the color and opacity as needed */
+  backdrop-filter: blur(5px); /* Apply blur effect */
 }
