--- a/styles/globals.css
+++ b/styles/globals.css
@@ -376,3 +376,21 @@ font-size: 12px;
   background: white;
   /* z-index: 1000; */
 }
+
+#my-popover::before {
+  content: "";
+  position: absolute;
+  top: -5px; /* Adjust this value to position the arrow correctly */
+  left: 50%;
+  transform: translateX(-50%);
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-bottom: 5px solid #ccc; /* Match the popover background color */
+}
+
+
+
+.input-focused:focus {
+  border-color: 'blue' !important;
+  /* box-shadow: 0 0 0 2px lightblue; */
+}
