--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,58 +1,56 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
- 
-@layer base {
-  
-@layer base {
-  :root {
-    --background: 0 0% 100%;
-    --foreground: 240 10% 3.9%;
-    --card: 0 0% 100%;
-    --card-foreground: 240 10% 3.9%;
-    --popover: 0 0% 100%;
-    --popover-foreground: 240 10% 3.9%;
-    --primary: 346.8 77.2% 49.8%;
-    --primary-foreground: 355.7 100% 97.3%;
-    --secondary: 240 4.8% 95.9%;
-    --secondary-foreground: 240 5.9% 10%;
-    --muted: 240 4.8% 95.9%;
-    --muted-foreground: 240 3.8% 46.1%;
-    --accent: 240 4.8% 95.9%;
-    --accent-foreground: 240 5.9% 10%;
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 240 5.9% 90%;
-    --input: 240 5.9% 90%;
-    --ring: 346.8 77.2% 49.8%;
-    --radius: 0.5rem;
-  }
 
-  .dark {
-    --background: 20 14.3% 4.1%;
-    --foreground: 0 0% 95%;
-    --card: 24 9.8% 10%;
-    --card-foreground: 0 0% 95%;
-    --popover: 0 0% 9%;
-    --popover-foreground: 0 0% 95%;
-    --primary: 346.8 77.2% 49.8%;
-    --primary-foreground: 355.7 100% 97.3%;
-    --secondary: 240 3.7% 15.9%;
-    --secondary-foreground: 0 0% 98%;
-    --muted: 0 0% 15%;
-    --muted-foreground: 240 5% 64.9%;
-    --accent: 12 6.5% 15.1%;
-    --accent-foreground: 0 0% 98%;
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 0 85.7% 97.3%;
-    --border: 240 3.7% 15.9%;
-    --input: 240 3.7% 15.9%;
-    --ring: 346.8 77.2% 49.8%;
+@layer base {
+  @layer base {
+    :root {
+      --background: 0 0% 100%;
+      --foreground: 240 10% 3.9%;
+      --card: 0 0% 100%;
+      --card-foreground: 240 10% 3.9%;
+      --popover: 0 0% 100%;
+      --popover-foreground: 240 10% 3.9%;
+      --primary: 346.8 77.2% 49.8%;
+      --primary-foreground: 355.7 100% 97.3%;
+      --secondary: 240 4.8% 95.9%;
+      --secondary-foreground: 240 5.9% 10%;
+      --muted: 240 4.8% 95.9%;
+      --muted-foreground: 240 3.8% 46.1%;
+      --accent: 240 4.8% 95.9%;
+      --accent-foreground: 240 5.9% 10%;
+      --destructive: 0 84.2% 60.2%;
+      --destructive-foreground: 0 0% 98%;
+      --border: 240 5.9% 90%;
+      --input: 240 5.9% 90%;
+      --ring: 346.8 77.2% 49.8%;
+      --radius: 0.5rem;
+    }
+
+    .dark {
+      --background: 20 14.3% 4.1%;
+      --foreground: 0 0% 95%;
+      --card: 24 9.8% 10%;
+      --card-foreground: 0 0% 95%;
+      --popover: 0 0% 9%;
+      --popover-foreground: 0 0% 95%;
+      --primary: 346.8 77.2% 49.8%;
+      --primary-foreground: 355.7 100% 97.3%;
+      --secondary: 240 3.7% 15.9%;
+      --secondary-foreground: 0 0% 98%;
+      --muted: 0 0% 15%;
+      --muted-foreground: 240 5% 64.9%;
+      --accent: 12 6.5% 15.1%;
+      --accent-foreground: 0 0% 98%;
+      --destructive: 0 62.8% 30.6%;
+      --destructive-foreground: 0 85.7% 97.3%;
+      --border: 240 3.7% 15.9%;
+      --input: 240 3.7% 15.9%;
+      --ring: 346.8 77.2% 49.8%;
+    }
   }
 }
 
-}
- 
 @layer base {
   * {
     @apply border-border;
@@ -62,8 +60,9 @@
   }
 }
 
-body{
-  font-family: adobe-clean,Source Sans Pro,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,sans-serif;
+body {
+  font-family: adobe-clean, Source Sans Pro, -apple-system, BlinkMacSystemFont,
+    Segoe UI, Roboto, sans-serif;
 }
 
 .avatar {
@@ -72,14 +71,14 @@ body{
   width: 200px;
   height: 200px;
   object-fit: cover;
-  box-sizing: border-box; 
+  box-sizing: border-box;
 }
 
 .profile-avatar {
   border-radius: 50%;
   overflow: hidden;
   object-fit: cover;
-  box-sizing: border-box; 
+  box-sizing: border-box;
   /* border: 4px solid #696969; */
 }
 /* 
@@ -97,50 +96,80 @@ body{
   height: 100%;
   position: absolute;
   left: 0;
-  top: 0; 
-  animation: sk-chase-dot 2.0s infinite ease-in-out both; 
+  top: 0;
+  animation: sk-chase-dot 2s infinite ease-in-out both;
 }
 
 .sk-chase-dot:before {
-  content: '';
+  content: "";
   display: block;
   width: 25%;
   height: 25%;
   background-color: #fff;
   border-radius: 100%;
-  animation: sk-chase-dot-before 2.0s infinite ease-in-out both; 
+  animation: sk-chase-dot-before 2s infinite ease-in-out both;
 }
 
-.sk-chase-dot:nth-child(1) { animation-delay: -1.1s; }
-.sk-chase-dot:nth-child(2) { animation-delay: -1.0s; }
-.sk-chase-dot:nth-child(3) { animation-delay: -0.9s; }
-.sk-chase-dot:nth-child(4) { animation-delay: -0.8s; }
-.sk-chase-dot:nth-child(5) { animation-delay: -0.7s; }
-.sk-chase-dot:nth-child(6) { animation-delay: -0.6s; }
-.sk-chase-dot:nth-child(1):before { animation-delay: -1.1s; }
-.sk-chase-dot:nth-child(2):before { animation-delay: -1.0s; }
-.sk-chase-dot:nth-child(3):before { animation-delay: -0.9s; }
-.sk-chase-dot:nth-child(4):before { animation-delay: -0.8s; }
-.sk-chase-dot:nth-child(5):before { animation-delay: -0.7s; }
-.sk-chase-dot:nth-child(6):before { animation-delay: -0.6s; }
+.sk-chase-dot:nth-child(1) {
+  animation-delay: -1.1s;
+}
+.sk-chase-dot:nth-child(2) {
+  animation-delay: -1s;
+}
+.sk-chase-dot:nth-child(3) {
+  animation-delay: -0.9s;
+}
+.sk-chase-dot:nth-child(4) {
+  animation-delay: -0.8s;
+}
+.sk-chase-dot:nth-child(5) {
+  animation-delay: -0.7s;
+}
+.sk-chase-dot:nth-child(6) {
+  animation-delay: -0.6s;
+}
+.sk-chase-dot:nth-child(1):before {
+  animation-delay: -1.1s;
+}
+.sk-chase-dot:nth-child(2):before {
+  animation-delay: -1s;
+}
+.sk-chase-dot:nth-child(3):before {
+  animation-delay: -0.9s;
+}
+.sk-chase-dot:nth-child(4):before {
+  animation-delay: -0.8s;
+}
+.sk-chase-dot:nth-child(5):before {
+  animation-delay: -0.7s;
+}
+.sk-chase-dot:nth-child(6):before {
+  animation-delay: -0.6s;
+}
 
 @keyframes sk-chase {
-  100% { transform: rotate(360deg); } 
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 @keyframes sk-chase-dot {
-  80%, 100% { transform: rotate(360deg); } 
+  80%,
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 @keyframes sk-chase-dot-before {
   50% {
-    transform: scale(0.4); 
-  } 100%, 0% {
-    transform: scale(1.0); 
-  } 
+    transform: scale(0.4);
+  }
+  100%,
+  0% {
+    transform: scale(1);
+  }
 }
 /* END OF LOADING */
-
 
 .dropdown::before {
   content: "";
@@ -152,24 +181,20 @@ body{
   border-color: transparent transparent whitesmoke transparent;
 }
 
-
-.svg-color{
-  color: grey
+.svg-color {
+  color: grey;
 }
 
-
-
-
-.refresh{
+.refresh {
   background: #ffffff;
   color: black;
-  padding: .4rem;
+  padding: 0.4rem;
   border-radius: 2rem;
   border: 3px solid rgb(242, 69, 69);
   font-size: 11px;
 }
 
-.sidebarAdmin{
+.sidebarAdmin {
   color: black;
 }
 
@@ -190,20 +215,22 @@ body{
 
 .black-toast {
   background-color: rgb(8, 8, 8) !important;
-  border:1px solid gray;
+  border: 1px solid gray;
   color: white !important;
 }
-
 
 .spin {
   animation: spin 1s linear infinite;
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
-
 
 /* SIDEBAR CODE */
 .sidebar {
@@ -294,7 +321,8 @@ body{
   cursor: pointer;
 }
 
-/* RIPPLE EFFECT AROUND THE SMALL CIRCLE ANIMATION */@keyframes ripple {
+/* RIPPLE EFFECT AROUND THE SMALL CIRCLE ANIMATION */
+@keyframes ripple {
   0% {
     transform: scale(0);
     opacity: 1;
@@ -328,13 +356,12 @@ body{
   animation-delay: 1s;
 }
 
-
 /* BLURRED IMAGE */
 .background-image {
   position: relative;
   width: 100%;
   height: 100vh;
-  background-image: url('/backgroundlayer.jpg');
+  background-image: url("/backgroundlayer.jpg");
   background-size: cover;
   background-position: center;
 }
@@ -343,25 +370,30 @@ body{
   position: absolute;
   top: 0;
   left: 0;
-  width:auto;
+  width: auto;
   height: auto;
-  background-color: rgba(255, 255, 255, 0.836); /* Change the color and opacity as needed */
+  background-color: rgba(
+    255,
+    255,
+    255,
+    0.836
+  ); /* Change the color and opacity as needed */
   backdrop-filter: blur(5px); /* Apply blur effect */
 }
 
-.custom-header-color{
-font-size: 12px;
+.custom-header-color {
+  font-size: 12px;
 }
 
 .custom-header-color .ag-header-row {
   background-color: #e6e6e6;
-  font-size:13px;
+  font-size: 13px;
 }
 
 .custom-header-color .ag-cell {
   font-size: 13px; /* Replace with your desired font size */
 }
-.custom-header-color  .ag-header-row-column-filter{
+.custom-header-color .ag-header-row-column-filter {
   background: #f8f8f8;
 }
 
@@ -369,7 +401,7 @@ font-size: 12px;
   background-color: #e6e6e6;
 }
 
-.admintab .MuiTabs-scroller{
+.admintab .MuiTabs-scroller {
   overflow: auto;
   margin-bottom: 0px;
   /* position: fixed; */
@@ -388,9 +420,31 @@ font-size: 12px;
   border-bottom: 5px solid #ccc; /* Match the popover background color */
 }
 
-
-
 .input-focused:focus {
-  border-color: 'blue' !important;
+  border-color: "blue" !important;
   /* box-shadow: 0 0 0 2px lightblue; */
+}
+
+/* DECISION POPOVER STYLE */
+.popover-backdrop {
+  position: fixed; /* Use 'fixed' to stick it relative to the viewport */
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); /* Centers the popover */
+  z-index: 2050; /* Ensure it's above other content */
+  /* Add your styling here */
+}
+
+.popover-content {
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px;
+  z-index: 2051;
+  border: 2px solid #ccc;
+}
+
+.parent-container {
+  position: relative; /* or 'fixed' if you want it to stay in place on scroll */
+  width: 100%; /* Adjust as needed */
+  height: 100%; /* Adjust as needed */
 }
